--- a/marineproject 2nd oct/marineproject/templates/signup.html
+++ b/marineproject 2nd oct/marineproject/templates/signup.html
@@ -5,16 +5,136 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign-Up Page</title>
+    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous">
 </head>
 
 <body>
-    <h1>Sign-Up Kar Gaandu</h1>
-    <form action="" method="POST">
-        {% csrf_token %}
-        {{form.as_p}}
-        <button>Sign-Up</button>
-    </form>
+    <div class="container d-flex justify-content-center align-items-center">
+        <form action="" method="POST">
+            <div class="card">
+                <div class="p-3 border-bottom d-flex align-items-center justify-content-center">
+                    <h5>Sign-Up</h5>
+                </div>
+                <div class="p-3 px-4 py-4 border-bottom">
+
+                    {% csrf_token %}{{form.as_p}}
+                </div> <button class="btn btn-danger btn-block continue">Sign-Up</button>
+            </div>
+        </form>
+    </div>
+    <style>
+        @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800&display=swap");
+
+        body {
+            background-color: #eee;
+            font-family: "Poppins", sans-serif;
+            font-weight: 300
+        }
+
+        .container {
+            height: 100vh
+        }
+
+        .card {
+            width: 400px;
+            border: none
+        }
+
+        .form-control {
+            border: 2px solid #bdc1d2;
+            font-size: 13px;
+            height: 48px
+        }
+
+        .form-control:focus {
+            color: #495057;
+            background-color: #fff;
+            border-color: #f7bfd9;
+            outline: 0;
+            box-shadow: none
+        }
+
+        .form {
+            position: relative;
+            margin-bottom: 25px
+        }
+
+        .form a {
+            position: absolute;
+            right: 8px;
+            bottom: 10px;
+            color: #6ca0d6;
+            font-size: 13px;
+            text-decoration: none;
+            z-index: 10;
+            background-color: #fff;
+            padding: 5px
+        }
+
+        .continue {
+            height: 48px;
+            font-size: 13px;
+            background-color: #e91e63;
+            border: none
+        }
+
+        .line-text {
+            color: #cecece
+        }
+
+        .line {
+            background-color: #eeeff6;
+            width: 166px;
+            height: 2px
+        }
+
+        .member a {
+            color: #e91e63;
+            font-size: 14px
+        }
+
+        .member span {
+            font-size: 13px;
+            font-weight: 400;
+            color: #6ca0d6
+        }
+
+        .facebook-button {
+            background-color: #39559f
+        }
+
+        .facebook-button:hover {
+            background-color: #39559f
+        }
+
+        .facebook:focus {
+            color: #fff;
+            background-color: #4285f4;
+            border-color: #4285f4;
+            box-shadow: none
+        }
+
+        .google-button {
+            background-color: #4285f4
+        }
+
+        .google-button:hover {
+            background-color: #4285f4
+        }
+    </style>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kQtW33rZJAHjgefvhyyzcGF3C5TFyBQBA13V1RKPf4uH+bwyzQxZ6CmMZHmNBEfJ"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.min.js"
+        integrity="sha384-PsUw7Xwds7x08Ew3exXhqzbhuEYmA2xnwc8BuD6SEr+UmEHlX8/MCltYEodzWA4u"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </body>
 
 </html>
