--- a/marineproject 2nd oct/marineproject/templates/dashboard.html
+++ b/marineproject 2nd oct/marineproject/templates/dashboard.html
@@ -8,12 +8,11 @@
 </head>
 <body>
 
-{%if user.customer.department.Trainee%}
+<!-- {%if request.user.customer.department.Trainer%}
 <h1>Trainee Dashboard</h1>
 <img src="" alt="need to upload profile pic of person">
 <p>{{request.user.customer.full_name}}</p>
-<p>{{request.user.customer.department}}</p>
-<p>{{request.user.customer.role}}</p>
+<p>Trainee</p>
 <p>{{request.user.customer.email}}</p>
 
 {%else%}
@@ -21,10 +20,18 @@
 <h1>HR Dashboard</h1>
 <img src="" alt="need to upload profile pic of person">
 <p>{{request.user.customer.full_name}}</p>
-<p>{{request.user.customer.department}}</p>
-<p>{{request.user.customer.role}}</p>
+<p>HR</p>
 <p>{{request.user.customer.email}}</p>
+<p>{{request.user.customer.department}}</p>
 
-{% endif %}
+{% endif %} -->
+
+{% for HR in post.department_set.all(Customer) %}
+<p>{{request.user.customer.full_name}}</p>
+<p>HR</p>
+<p>{{request.user.customer.email}}</p>
+<p>{{request.user.customer.department}}</p>
+{% endfor %}
+
 </body>
 </html>
