--- a/marineproject 2nd oct/marineproject/templates/dashboard.html
+++ b/marineproject 2nd oct/marineproject/templates/dashboard.html
@@ -1,37 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
 </head>
+
 <body>
 
-<!-- {%if request.user.customer.department.Trainer%}
-<h1>Trainee Dashboard</h1>
-<img src="" alt="need to upload profile pic of person">
-<p>{{request.user.customer.full_name}}</p>
-<p>Trainee</p>
-<p>{{request.user.customer.email}}</p>
+    {%if request.user.customer.department.Trainer%}
+    <h1>Trainee Dashboard</h1>
+    <img src="" alt="need to upload profile pic of person">
+    <p>{{request.user.customer.full_name}}</p>
+    <p>Trainee</p>
+    <p>{{request.user.customer.email}}</p>
 
-{%else%}
- 
-<h1>HR Dashboard</h1>
-<img src="" alt="need to upload profile pic of person">
-<p>{{request.user.customer.full_name}}</p>
-<p>HR</p>
-<p>{{request.user.customer.email}}</p>
-<p>{{request.user.customer.department}}</p>
+    {%else%}
 
-{% endif %} -->
+    <h1>HR Dashboard</h1>
+    <img src="" alt="need to upload profile pic of person">
+    <p>{{request.user.customer.full_name}}</p>
+    <p>HR</p>
+    <p>{{request.user.customer.email}}</p>
+    <p>{{request.user.customer.department}}</p>
 
-{% for HR in post.department_set.all(Customer) %}
-<p>{{request.user.customer.full_name}}</p>
-<p>HR</p>
-<p>{{request.user.customer.email}}</p>
-<p>{{request.user.customer.department}}</p>
-{% endfor %}
+    {% endif %}
 
 </body>
+
 </html>
