--- a/marineproject 2nd oct/marineproject/templates/confirm_template.html
+++ b/marineproject 2nd oct/marineproject/templates/confirm_template.html
@@ -3,16 +3,14 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Confirmation</title>
 </head>
 
 <body>
     {% if success %}
-    <p1>You've confirmed your account!</p1>
+    {{ user.username }}, your account is confirmed!
     {% else %}
-    <p1>Error, invalid token!</p1>
+    Error, invalid token!
     {% endif %}
 </body>
 
