--- a/marineproject 2nd oct/marineproject/templates/hrdashboard.html
+++ b/marineproject 2nd oct/marineproject/templates/hrdashboard.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <h1>HR Dashboard</h1>
+    <a href="{% url 'marineapp:maindashboard' %}"><button onclick="">Main Dashboard</button></a>
+
 </body>
 </html>
