--- a/marineproject 2nd oct/marineproject/templates/trainerdashboard.html
+++ b/marineproject 2nd oct/marineproject/templates/trainerdashboard.html
@@ -8,5 +8,13 @@
 </head>
 <body>
     <h1>Trainer Dashboard</h1>
+    <a href="{% url 'marineapp:maindashboard' %}"><button onclick="">Main Dashboard</button></a>
+    <a href="{% url 'marineapp:module1question%}"><button onclick="">Module 1</button></a>
+    <a href="{% url 'marineapp:maindashboard' %}"><button onclick="">Module 2</button></a>
+    <a href="{% url 'marineapp:maindashboard' %}"><button onclick="">Module 3</button></a>
+    <a href="{% url 'marineapp:maindashboard' %}"><button onclick="">Module 4</button></a>
+    <a href="{% url 'marineapp:maindashboard' %}"><button onclick="">Module 5</button></a>
+
+
 </body>
 </html>
