--- a/marineproject 2nd oct/marineproject/templates/traineedashboard.html
+++ b/marineproject 2nd oct/marineproject/templates/traineedashboard.html
@@ -10,5 +10,12 @@
     <h1>Trainee Dashboard</h1>
     <a href="{% url 'marineapp:maindashboard' %}"><button onclick="">Main Dashboard</button></a>
 
+
+    <a href="{% url 'marineapp:module3question' %}"><button>Module 1</button></a>
+    <a href="{% url 'marineapp:module3question' %}"><button>Module 2</button></a>
+    <a href="{% url 'marineapp:module3question' %}"><button>Module 3</button></a>
+    <a href="{% url 'marineapp:module3question' %}"><button>Module 4</button></a>
+    <a href="{% url 'marineapp:module3question' %}"><button>Module 5</button></a>
+
 </body>
 </html>
