--- a/marineproject 2nd oct/marineproject/templates/maindashboard.html
+++ b/marineproject 2nd oct/marineproject/templates/maindashboard.html
@@ -11,11 +11,11 @@
 <body>
 
     <h1>Main Dashboard</h1>
-    <img src="" alt="need to upload profile pic of person">
+    <img src="{{request.user.customer.profile_pic.url}}" alt="need to upload profile pic of person">
     <p>Name: {{request.user.customer.full_name}}</p>
     <p>Email: {{request.user.customer.email}}</p>
-    <p>Departments: {{request.user.customer.department}}</p>
 
+    <p>Departments: </p>
     <!-- if statement to show only one value -->
     {% if user.customer.hr %}
     <a href="{% url 'marineapp:hrdashboard' %}"><button onclick="">HR Dashboard</button></a>
