--- a/marineproject 2nd oct/marineproject/templates/trainerdashboard.html
+++ b/marineproject 2nd oct/marineproject/templates/trainerdashboard.html
@@ -46,7 +46,7 @@
                         <td>{{i.first_wrong_option}}</td>
                         <td>{{i.second_wrong_option}}</td>
                         <td>{{i.third_wrong_option}}</td>
-                        <td><a href="{% url 'marineapp:deleteevent' %}"><button> Delete </button></a></td>
+                        <td><a href=" "><button> Delete </button></a></td>
                     </tr>
                     {% endfor %}
 
@@ -54,11 +54,7 @@
             </table>
         </div>
     </div>
-<<<<<<< HEAD
-    <a href="{% url 'marineapp:module2question' %}"><button>Module 2</button></a>
-=======
     <a href="{% url 'marineapp:module2question' %}"><button>Upload questions for Module 2</button></a>
->>>>>>> 4ae664ef4b33c13c7f76940728ad54468421b495
 
     <h1>Module 2 Table</h1>
 
@@ -91,7 +87,7 @@
                         <td>{{i.first_wrong_option}}</td>
                         <td>{{i.second_wrong_option}}</td>
                         <td>{{i.third_wrong_option}}</td>
-                        <td><a href="{% url 'marineapp:deleteevent' %}"><button> Delete </button></a></td>
+                        <td><a href=""><button> Delete </button></a></td>
                     </tr>
                     {% endfor %}
 
@@ -102,7 +98,7 @@
 
 
     <a href="{% url 'marineapp:module3question' %}"><button> Upload questions for Module 3</button></a>
-<<<<<<< HEAD
+
 <h1>Module 3 Table</h1>
 
     <div class="row"> 
@@ -140,7 +136,7 @@
             </table> 
         </div> 
     </div> 
-=======
+
     <h1>Module 3 Table</h1>
 
     <div class="row">
@@ -172,7 +168,7 @@
                         <td>{{i.first_wrong_option}}</td>
                         <td>{{i.second_wrong_option}}</td>
                         <td>{{i.third_wrong_option}}</td>
-                        <td><a href="{% url 'marineapp:deleteevent' %}"><button> Delete </button></a></td>
+                        <td><a href=""><button> Delete </button></a></td>
                     </tr>
                     {% endfor %}
 
@@ -180,7 +176,7 @@
             </table>
         </div>
     </div>
->>>>>>> 4ae664ef4b33c13c7f76940728ad54468421b495
+
 
 
     <a href=""><button> Upload questions for Module 4</button></a>
