--- a/marineproject 2nd oct/marineproject/templates/maindashboard.html
+++ b/marineproject 2nd oct/marineproject/templates/maindashboard.html
@@ -11,7 +11,7 @@
 <body>
 
     <h1>Main Dashboard</h1>
-    <img src="{{request.user.customer.profile_pic.url}}" alt="need to upload profile pic of person">
+    <img src="{{request.user.customer.profile_pic}}" alt="need to upload profile pic of person">
     <p>Name: {{request.user.customer.full_name}}</p>
     <p>Email: {{request.user.customer.email}}</p>
 
