--- a/marineproject 2nd oct/marineproject/templates/trainerdashboard.html
+++ b/marineproject 2nd oct/marineproject/templates/trainerdashboard.html
@@ -46,7 +46,7 @@
                         <td>{{i.first_wrong_option}}</td>
                         <td>{{i.second_wrong_option}}</td>
                         <td>{{i.third_wrong_option}}</td>
-                        <td><a href=" "><button> Delete </button></a></td>
+                        <td><a href="/delete-record/{{i.id}}"><button> Delete </button></a></td>
                     </tr>
                     {% endfor %}
 
@@ -137,47 +137,7 @@
         </div> 
     </div> 
 
-    <h1>Module 3 Table</h1>
-
-    <div class="row">
-
-        <div class="data_list_class" style="width: 100%;">
-            <table class="table table-active table-bordered table-hover-responsive-xl" id="myTable">
-                <thead class="thead-dark">
-                    <tr id='tableHeader'>
-                        <th class="h5"> Word 1 </button> </th>
-                        <th class="h5"> Word 2 </button> </th>
-                        <th class="h5"> Question </button> </th>
-                        <th class="h5"> Right Option </button> </th>
-                        <th class="h5"> First Wrong Option </button> </th>
-                        <th class="h5"> Second Wrong Option </button> </th>
-                        <th class="h5"> Third Wrong Option </button> </th>
-                        <th class="h5"> Remove </button> </th>
-                    </tr>
-
-                </thead>
-
-                <tbody>
-
-                    {% for i in module3_list%}
-                    <tr>
-                        <td>{{i.word1}}</td>
-                        <td>{{i.word2}}</td>
-                        <td>{{i.question}}</td>
-                        <td>{{i.right_option}}</td>
-                        <td>{{i.first_wrong_option}}</td>
-                        <td>{{i.second_wrong_option}}</td>
-                        <td>{{i.third_wrong_option}}</td>
-                        <td><a href=""><button> Delete </button></a></td>
-                    </tr>
-                    {% endfor %}
-
-                </tbody>
-            </table>
-        </div>
-    </div>
-
-
+    
 
     <a href=""><button> Upload questions for Module 4</button></a>
     <a href=""><button> Upload questions for Module 5</button></a>
