--- a/marineproject 2nd oct/marineproject/templates/maindashboard.html
+++ b/marineproject 2nd oct/marineproject/templates/maindashboard.html
@@ -9,7 +9,8 @@
 </head>
 
 <body>
-
+    <!-- {% include 'navbar.html' %} -->
+<!-- copy lines 15,16, 20-28 -->
     <h1>Main Dashboard</h1>
     <img src="{{request.user.customer.profile_pic}}" alt="need to upload profile pic of person">
     <p>Name: {{request.user.customer.full_name}}</p>
