--- a/marineproject 2nd oct/marineproject/templates/signup.html
+++ b/marineproject 2nd oct/marineproject/templates/signup.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous">
 </head>
-
+<!-- copy lines 15-25 -->
 <body>
     <div class="container d-flex justify-content-center align-items-center">
         <form action="" method="POST">
