--- a/marineproject 2nd oct/marineproject/templates/module3.html
+++ b/marineproject 2nd oct/marineproject/templates/module3.html
@@ -1,22 +1,26 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Module 3 Form</title>
 </head>
+
 <body>
 
     <h1>Module 3 Form</h1>
     <div>
-    <form action="" method="POST" enctype="multipart/form-data">
-        {% csrf_token %} {{ form.as_p }}
-        <button class="btn btn-primary" type="submit">Upload</button>
-      </form>
+        <form action="" method="POST" enctype="multipart/form-data">
+            {% csrf_token %} {{ form.as_p }}
+            <button class="btn btn-primary" type="submit">Upload</button>
+        </form>
     </div>
 
- 
-    
+
+
 </body>
+
 </html>
