--- a/marineproject 2nd oct/marineproject/templates/signup.html
+++ b/marineproject 2nd oct/marineproject/templates/signup.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -10,6 +11,7 @@
         integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous">
 </head>
 <!-- copy lines 15-25 -->
+
 <body>
     <div class="container d-flex justify-content-center align-items-center">
         <form action="" method="POST">
