--- a/marineproject 2nd oct/marineproject/templates/traineedashboard.html
+++ b/marineproject 2nd oct/marineproject/templates/traineedashboard.html
@@ -1,11 +1,14 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trainee Dashboard</title>
 </head>
+
 <body>
     <h1>Trainee Dashboard</h1>
     <a href="{% url 'marineapp:maindashboard' %}"><button onclick="">Main Dashboard</button></a>
@@ -18,4 +21,5 @@
     <a href="{% url 'marineapp:module3question' %}"><button>Module 5</button></a>
 
 </body>
+
 </html>
