--- a/marineproject 2nd oct/marineproject/templates/traineedashboard.html
+++ b/marineproject 2nd oct/marineproject/templates/traineedashboard.html
@@ -17,8 +17,8 @@
     <a href="{% url 'marineapp:module3question' %}"><button>Module 1</button></a>
     <a href="{% url 'marineapp:module3question' %}"><button>Module 2</button></a>
     <a href="{% url 'marineapp:module3question' %}"><button>Module 3</button></a>
-    <a href="{% url 'marineapp:module3question' %}"><button>Module 4</button></a>
-    <a href="{% url 'marineapp:module3question' %}"><button>Module 5</button></a>
+    <a href="{% url 'marineapp:Outsideship' %}"><button>Module 4</button></a>
+    <a href="{% url 'marineapp:Outsideship' %}"><button>Module 5</button></a>
 
 </body>
 
