--- a/marineproject 2nd oct/marineproject/templates/maindashboard.html
+++ b/marineproject 2nd oct/marineproject/templates/maindashboard.html
@@ -28,7 +28,7 @@
     {% if user.customer.trainee %}
     <a href="{% url 'marineapp:traineedashboard' %}"><button onclick="">Trainee Dashboard</button></a>
     {% endif %}
-    <a href="{% url 'marineapp:insideship' %}"><button onclick="">Virtual Tour</button></a>
+    <a href="{% url 'marineapp:virtualtour' %}"><button onclick="">Virtual Tour</button></a>
 
 
     
