--- a/marineproject 2nd oct/marineproject/templates/virtualtourmain.html
+++ b/marineproject 2nd oct/marineproject/templates/virtualtourmain.html
@@ -1,5 +1,4 @@
-{% load static %}
-<!DOCTYPE html>
+<!-- DOCTYPE html>
 <html style="font-size: 16px;">
 
 <head>
@@ -77,49 +76,20 @@
               </ul>
             </div>
           </div>
-          <div class="u-black u-menu-overlay u-opacity u-opacity-70"></div>
-        </div>
-      </nav>
-    </div>
-  </header>
-  <section class="u-clearfix u-section-1" id="sec-7ddf">
-    <div class="u-clearfix u-sheet u-sheet-1">
-      <img class="u-image u-image-default u-image-1" src="{% static 'images/ship.svg' %}" alt="" data-image-width="680"
-        data-image-height="450">
-      <a href="#"
-        class="u-btn u-btn-round u-button-style u-hover-palette-1-light-1 u-palette-1-base u-radius-50 u-btn-1">Starboard
-        side</a>
-      <a href="#"
-        class="u-btn u-btn-round u-button-style u-hover-palette-1-light-1 u-palette-1-base u-radius-50 u-btn-2">Deck</a>
-      <a href="#"
-        class="u-btn u-btn-round u-button-style u-hover-palette-1-light-1 u-palette-1-base u-radius-50 u-btn-3">Button</a>
-      <a href="#"
-        class="u-btn u-btn-round u-button-style u-hover-palette-1-light-1 u-palette-1-base u-radius-50 u-btn-4">Bulbous
-        bow</a>
-      <a href="#"
-        class="u-btn u-btn-round u-button-style u-hover-palette-1-light-1 u-palette-1-base u-radius-50 u-btn-5">Anchor</a>
-      <a href="#"
-        class="u-btn u-btn-round u-button-style u-hover-palette-1-light-1 u-palette-1-base u-radius-50 u-btn-6">keel
-        &amp; hull<br>
-      </a>
-      <a href="#"
-        class="u-btn u-btn-round u-button-style u-hover-palette-1-light-1 u-palette-1-base u-radius-50 u-btn-7">Propeller
-        &amp; rudder</a>
-      <a href="#"
-        class="u-btn u-btn-round u-button-style u-hover-palette-1-light-1 u-palette-1-base u-radius-50 u-btn-8">Stern</a>
-      <a href="#"
-        class="u-btn u-btn-round u-button-style u-hover-palette-1-light-1 u-palette-1-base u-radius-50 u-btn-9">Funnel</a>
-    </div>
-  </section>
-
-
-  <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-caa6">
-    <div class="u-clearfix u-sheet u-sheet-1">
-      <p class="u-small-text u-text u-text-variant u-text-1">Sample text.</p>
-    </div>
-  </footer>
-  <section class="u-backlink u-clearfix u-grey-80">
-  </section>
-</body>
-
-</html>
+        </nav>
+      </div></header> 
+    <section class="u-clearfix u-section-1" id="sec-7ddf">
+      <div class="u-clearfix u-sheet u-sheet-1">
+        <img class="u-image u-image-default u-image-1" src="images/ship.svg" alt="" data-image-width="680" data-image-height="450">
+        <a href="https://nicepage.com/k/birthday-html-templates" class="u-btn u-btn-round u-button-style u-hover-palette-1-light-1 u-palette-1-base u-radius-50 u-btn-1">Starboard side</a>
+        <a href="https://nicepage.com/k/birthday-html-templates" class="u-btn u-btn-round u-button-style u-hover-palette-1-light-1 u-palette-1-base u-radius-50 u-btn-2">Deck</a>
+        <a href="https://nicepage.com/k/birthday-html-templates" class="u-btn u-btn-round u-button-style u-hover-palette-1-light-1 u-palette-1-base u-radius-50 u-btn-3">Button</a>
+        <a href="https://nicepage.com/k/birthday-html-templates" class="u-btn u-btn-round u-button-style u-hover-palette-1-light-1 u-palette-1-base u-radius-50 u-btn-4">Bulbous bow</a>
+        <a href="https://nicepage.com/k/birthday-html-templates" class="u-btn u-btn-round u-button-style u-hover-palette-1-light-1 u-palette-1-base u-radius-50 u-btn-5">Anchor</a>
+        <a href="https://nicepage.com/k/birthday-html-templates" class="u-btn u-btn-round u-button-style u-hover-palette-1-light-1 u-palette-1-base u-radius-50 u-btn-6">keel &amp; hull<br>
+        </a>
+        <a href="https://nicepage.com/k/birthday-html-templates" class="u-btn u-btn-round u-button-style u-hover-palette-1-light-1 u-palette-1-base u-radius-50 u-btn-7">Propeller &amp; rudder</a>
+        <a href="https://nicepage.com/k/birthday-html-templates" class="u-btn u-btn-round u-button-style u-hover-palette-1-light-1 u-palette-1-base u-radius-50 u-btn-8">Stern</a>
+        <a href="https://nicepage.com/k/birthday-html-templates" class="u-btn u-btn-round u-button-style u-hover-palette-1-light-1 u-palette-1-base u-radius-50 u-btn-9">Funnel</a>
+      </div>
+    </section> -->
