--- a/marineproject 2nd oct/marineproject/templates/trainerdashboard.html
+++ b/marineproject 2nd oct/marineproject/templates/trainerdashboard.html
@@ -138,10 +138,94 @@
         </div>
     </div>
 
+    <a href="{% url 'marineapp:module4question' %}"><button> Upload questions for Module 4</button></a>
+
+    <h1>Module 4 Table</h1>
+
+    <div class="row">
+
+        <div class="data_list_class" style="width: 100%;">
+            <table class="table table-active table-bordered table-hover-responsive-xl" id="myTable">
+                <thead class="thead-dark">
+                    <tr id='tableHeader'>
+
+                        <th class="h5"> Hangman Word </button> </th>
+
+                        <th class="h5"> Question </button> </th>
+                        <th class="h5"> Right Option </button> </th>
+                        <th class="h5"> First Wrong Option </button> </th>
+                        <th class="h5"> Second Wrong Option </button> </th>
+                        <th class="h5"> Third Wrong Option </button> </th>
+                        <th class="h5"> Explanation </button> </th>
+                    </tr>
+
+                </thead>
+
+                <tbody>
+
+                    {% for i in module4_list%}
+                    <tr>
+                        <td>{{i.hangman_word}}</td>
+
+                        <td>{{i.question}}</td>
+                        <td>{{i.right_option}}</td>
+                        <td>{{i.first_wrong_option}}</td>
+                        <td>{{i.second_wrong_option}}</td>
+                        <td>{{i.third_wrong_option}}</td>
+                        <td>{{i.explanation}}</td>
+
+                    </tr>
+                    {% endfor %}
+
+                </tbody>
+            </table>
+        </div>
+    </div>
+    <a href="{% url 'marineapp:module5question' %}"><button> Upload questions for Module 5</button></a>
+
+    <h1>Module 5 Table</h1>
+
+    <div class="row">
+
+        <div class="data_list_class" style="width: 100%;">
+            <table class="table table-active table-bordered table-hover-responsive-xl" id="myTable">
+                <thead class="thead-dark">
+                    <tr id='tableHeader'>
+
+                        <th class="h5"> Hangman Word </button> </th>
+
+                        <th class="h5"> Question </button> </th>
+                        <th class="h5"> Right Option </button> </th>
+                        <th class="h5"> First Wrong Option </button> </th>
+                        <th class="h5"> Second Wrong Option </button> </th>
+                        <th class="h5"> Third Wrong Option </button> </th>
+                        <th class="h5"> Explanation </button> </th>
+                    </tr>
+
+                </thead>
+
+                <tbody>
+
+                    {% for i in module5_list%}
+                    <tr>
+                        <td>{{i.hangman_word}}</td>
+
+                        <td>{{i.question}}</td>
+                        <td>{{i.right_option}}</td>
+                        <td>{{i.first_wrong_option}}</td>
+                        <td>{{i.second_wrong_option}}</td>
+                        <td>{{i.third_wrong_option}}</td>
+                        <td>{{i.explanation}}</td>
+
+                    </tr>
+                    {% endfor %}
+
+                </tbody>
+            </table>
+        </div>
+    </div>
 
 
-    <a href=""><button> Upload questions for Module 4</button></a>
-    <a href=""><button> Upload questions for Module 5</button></a>
 
 
 </body>
